--- a/math_8651_key_concepts.Rmd
+++ b/math_8651_key_concepts.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "MATH 8651 - Key Content"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 ### Note Set 1:
@@ -112,8 +114,8 @@ output: html_notebook
 
 ### Note set 5: 
 
-  * Definition: Let $Y_1, Y_2, ...; Y$ be real valued RVs. Then $Y_n \rightarrow Y$ **in probability** as $n \rightarrow \infty$ if, for each $\varepsilon > 0$, \[\lim_{n\rightarrow\infty}P(\{\omega: |Y_n(\omega) - Y(\omega)| > \varepsilon\}) = 0 \text{ (i.p)}.\]
-  * Definition: With same conditions, $Y_n \rightarrow Y$ **almost surely** as $n \rightarrow \infty$ if, \[P(\{\omega: \lim_{n\rightarrow\infty}Y_n(\omega) = Y(\omega)\}) = 1.\] (See notes for version with $\varepsilon$.)
+  * Definition: Let $Y_1, Y_2, ...; Y$ be real valued RVs. Then $Y_n \rightarrow Y$ **in probability** as $n \rightarrow \infty$ if, for each $\varepsilon > 0$, \[\lim_{n\rightarrow\infty}P(\{\omega: |Y_n(\omega) - Y(\omega)| > \varepsilon\}) = 0 \text{ (i.p)}.\] Equivalently, for all $\varepsilon > 0$, there exists $n_0$ s.t. \[P(\{\omega: |Y_n(\omega) - Y(\omega)| > \varepsilon\}) \leq \varepsilon \text{ for } n \geq n_0.\]
+  * Definition: With same conditions, $Y_n \rightarrow Y$ **almost surely** as $n \rightarrow \infty$ if, \[P(\{\omega: \lim_{n\rightarrow\infty}Y_n(\omega) = Y(\omega)\}) = 1.\] Equivalently, for all $\varepsilon > 0$, there exists $n_0$ s.t. \[P(\{\omega: |Y_n(\omega) - Y(\omega)| \geq \varepsilon \text{ for some } n \geq n_0\}) < \varepsilon.\]
 
 * Proposition 12.1: If $Y$'s above defined on same p.s. then almost sure convergence implies convergence in probability. 
 * Proposition 12.2: Same setup as above. If $Y_n$ converges in probability to $Y$, then there exists a subsequence $n_1, n_2,...$ so that $Y_{n_k} \rightarrow Y$ a.s.
@@ -144,7 +146,16 @@ output: html_notebook
 
   * Define the characteristic function of a real valued RV $X$ to be $\varphi(t) = E[e^{itX}], \: t\in\mathbb{R}$. Note: $E[e^{itX}] = E[\cos(tX)] + iE[\sin(tX)]$.  
   * Define related Laplace transform, MGF, and generating function. 
-  * List properties of CFs, and give some common examples (include here?). 
+  * Some properties of CFs:
+  
+    1. $\varphi(0) = 1$.
+    2. $|\varphi(t)| \leq 1$.
+    3. $\overline{\varphi}(t) = \varphi(-t)$. 
+    4. $\varphi(t)$ is uniformly continuous.
+    5. Shifts and scaling: $\varphi_{aX+b} = e^{itb}\varphi_X(at)$.
+    6. Convex combinations: If $\varphi_i$ are CFs and $\sum a_i = 1, \:a_i \geq 0$, then so is $\sum a_i\varphi_i$. 
+    7. Products: If $\varphi_1,\varphi_2$ are CFs, then so is $\varphi_1\varphi_2$. Moreover, if $X_1,X_2$ are independent ($\mathbb{R}$-valued) RVs with CFs $\varphi_1,\varphi_2$. Then $X_1 + X_2$ has CF $\varphi_1\varphi_2$.
+    8. Symmetrization: if $\varphi$ is a CF, then so is $|\varphi|^2$. (Note: $|\varphi|$ is not a CF in general.)
   * Uniqueness: If $\varphi_{X_1}(t) = \varphi_{X_2}(t)$ for all $t$, then $X_1, X_2$ have the same distribution. 
   * **Theorem 13.1 (Inversion Theorem):** If $x_1 < x_2$, then \[\mu((x_1,x_2)) + \frac{1}{2}\mu(\{x_1\}) + \frac{1}{2}\mu(\{x_2\}) = \lim_{T\rightarrow\infty}\frac{1}{2\pi}\int_{-T}^T \frac{e^{-itx_1} - e^{-itx_2}}{it}\varphi(t)dt.\]
   * Useful facts related to CFs in proof, e.g. $|e^{itX}| = 1$, and the integral trick. 
@@ -186,18 +197,78 @@ output: html_notebook
   * Proposition 14.5 (Helly Selection Principle): Let $F_n(x), \: n = 1,2,...$ be a sequence of distribution functions. Then there exists a subsequence $F_{n_k}(x)$ and an increasing right continuous function $F(x)$ with $\lim_{x\rightarrow -\infty}F(x) \geq 0$ and $\lim_{x\rightarrow\infty}F(x) = 1$, such that for all $x \in C_F,$ \[\lim_{k\rightarrow\infty}F_{n_k}(x) = F(x).\]
   
     * Note: This mean $F_n(x), \: n=1,2,...$ has a "limit", but this need not be a distribution function. Need the sequence to be tight in order to get a distribution function (see below). 
+    * Basic fact about sequences in a compact space that is related here: Let $G_n(x)$ be functions with $G_n(x) \in [0,1]$ for all $x$. For each $x \in \mathbb{R},$ (pick $x$ first, different than Prop 14.5) there exists a subsequence $\{m_k\}$ s.t. $\lim_{n\rightarrow\infty}G_{m_k}(x)$ exists. This suggests compactness is playing a key role in the HSP. 
     
   * Definition: A collection of measures $\{\mu_{\alpha}\}$ (or $F_{\alpha}(x)$) is **tight** if for every $\varepsilon > 0$, there exists a _finite_ interval $I$ s.t. \[\inf_{\alpha}\mu_{\alpha}(I) > 1 - \varepsilon.\]
   * Proposition 14.6: Every limit $F(x)$ in Proposition 14.5 is a distribution function iff $\{F_n(x)\}$ is tight.
+  
+    * Note: Taking Proposition 14.5 and 14.6 together, this means that if $\{F_n\}$ is tight, then there exists a subsequence $\{F_{n_k}\}$ such that $F_{n_k} \rightarrow F$ weakly, where $F$ is a distribution function.
+    
   * Definition: The family of functions $f_{\alpha}: \mathbb{R} \rightarrow \mathbb{R}$ is **equicontinuous** if for every $\varepsilon > 0$, there exists a $\delta > 0$ s.t. for $|x_2 - x_1| < \delta$ and any $\alpha$, then $|f_{\alpha}(x_2) - f_{\alpha}(x_1)| < \varepsilon$. 
   * **Theorem 14.1 (Levy-Cramer Convergence Theorem):** 
   
     (i) Let $F_n, \: n = 1,2,...$ and $F_{\infty}$ be distribution functions with characteristic functions $\varphi_n, \: n = 1,2,...$ and $\varphi_{\infty}$. If $F_n$ converges weakly to $F$, then $\varphi_n(t) \rightarrow \varphi_{\infty}(t)$ uniformly in every finite interval. Furthermore $\{\varphi_n\}$ is equicontinuous. 
     (ii) (More useful) Let $F_n, \: n = 1,2,...$ be distribution functions with CFs $\varphi_n, \: n = 1,2,...$. Suppose that (a) $\lim_{n \rightarrow\infty}\varphi_n(t) = \varphi_{\infty}(t)$ for all $t$ for some function $\varphi_{\infty}$ (not necessarily a CF yet) and (b) $\varphi_{\infty}$ is continuous at 0. Then, (a') $F_n$ converges weakly to $F_{\infty}$ for some distribution function $F_{\infty}$, and (b') $\varphi_{\infty}$ is the CF of $F_{\infty}$. 
   
-  * Next...
+  * Lemma 14.1: For each $\delta > 0$, $\mu([-2/\delta, 2/\delta]) \geq \frac{1}{\delta}|\int_{-\delta}^{\delta}\varphi(t)dt| - 1,$ where $\varphi$ is the CF associated with $\mu$. 
   
+    * This says that if $\varphi$ is to close to 1 near $t = 0$, then $\mu$ has most of its mass not too far from 0. 
+    * Note on the LHS this is a _large_ interval since $\delta$ is usually small in practice. 
+
+
+### Note set 8:
+
+  * **Theorem 15.1 (Khintchine WLLN):** Let $X_1,X_2,...$ be IID RVs with mean 0. Then $S_n/n \rightarrow 0$ i.p.
+  * Useful fact: \[\lim_{n\rightarrow\infty}(1 + t/n + o(1/n))^n = e^t.\]
+  * **Theorem 15.2 (Polya CLT):** Let $X_1, X_2,...$ be IID RVs with mean 0 and variance 1 (added assumption on variance here compared to the weak law above). Then \[\frac{S_n}{\sqrt{n}} \rightarrow_D Z \text{  as  } n\rightarrow\infty.\]
   
+    * Note: this immediately generalizes the case where $X_1,X_2,...$ are IID with mean $\mu$ and variance $\sigma^2 > 0$, then \[\frac{S_n - n\mu}{\sqrt{n\sigma^2}} \rightarrow_D Z \text{  as  } n\rightarrow\infty.\]
+    * Note: previous dominating techniques will not work to show this result because we ultimately want a distribution. So we need the CF machinery and to leverage the LCCT. 
+    
+  * **Theorem 15.3 (Liapounov CLT):** Let $X_1,X_2,...$ be independent (no longer require IID) with $E(X_k) = 0, \: \text{Var}(X_k) = \sigma^2_k < \infty,$ and $E(|X_k|) = \gamma_k < \infty$. Set $\text{Var}(S_n) = \sum_{k = 1}^n\sigma_k^2 := s_n^2,$ and $\Gamma_n = \sum_{k=1}^n \gamma_k$. If $\lim_{n\rightarrow\infty} \Gamma_n/s_n^3 = 0$ (note the power of 3 here), then \[\frac{S_n}{s_n} \rightarrow_D Z \text{  as  } n\rightarrow\infty.\]
+  
+    * Note the $s_n$ in the denominator of final statement. 
+  * Definition: A double array of RVs (idk if this is a general definition but we need below) can be written as $\{X_{n,j}, \: n \geq 1, \: 1 \leq j \leq k_n\}$ and has the following properties:
+  
+    * RVs in the same row (same $n$) are independent.
+    * Define $S_n = \sum_{j = 1}^{k_n}X_{n,j}$ to be the sum (across columns) for a single row.
+    * For all $n,j$ we have $E(X_{n,j}) = 0$, and $s_n^2 = \text{Var}(S_n) = \sum_{j = 1}^{k_n}\text{Var}(X_{n,j}) = 1$ (i.e. the sum of variances in a single row equals 1). 
+    
+  * **Theorem 15.4 (Lindeberg-Feller CLT):** Let $\{X_{n,j}\}$ be a double array as above. Assume that for all $\eta > 0$, \[\lim_{n\rightarrow\infty}\sum_{j=1}^{k_n} \int_{|x| > \eta}x^2F_{n,j}(dx) = 0, \quad (1)\] (i.e.  $\lim_{n\rightarrow\infty}\sum_{j=1}^{k_n} \int_{|x| \leq \eta}x^2F_{n,j}(dx) = 1$). Then, \[S_n \rightarrow_D Z \text{  as  } n\rightarrow\infty.\] Conversely, if $S_n \rightarrow_D Z$ and \[\lim_{n\rightarrow\infty}\max_{1\leq j \leq k_n}P(|X_{n,j}| > \eta) = 0, \text{ for all } \eta > 0,\] then (1) holds above. 
+  * **Theorem 15.5 (Law of the Iterated Logarithm):** Let $X_k, \: k = 1,2,...$ be IID RVs with $E(X_1) = 0, \: \text{Var}(X_1) = 1$. Then, \[\limsup_{n\rightarrow\infty} \frac{S_n}{\sqrt{2n\log\log n}} = 1 \text{ a.s.},\] and \[\liminf_{n\rightarrow\infty} \frac{S_n}{\sqrt{2n\log\log n}} = -1 \text{ a.s.}.\]
+  * **Theorem 15.6 (Alternative LIL):** Let $X_k, \: k = 1,2,...$ be independent (no londer require IID) RVs with $E(X_k) = 0, \: \text{Var}(X_k) = \sigma^2_k, \: \gamma_k = E(|X_k|^3) < \infty, s_n^2 = \sum_{k=1}^n\sigma_k^2, \Gamma_n = \sum_{k=1}^n \gamma_k.$ Suppose that for some $\varepsilon > 0, A > 0$, we have $\Gamma_n/s_n^3 \leq A/(\log s_n)^{1+\varepsilon}$ for all $n$. Then, \[\limsup_{n\rightarrow\infty} \frac{S_n}{\sqrt{2s_n^2\log\log s_n}} = 1 \text{ a.s.},\] and \[\liminf_{n\rightarrow\infty} \frac{S_n}{\sqrt{2s_n^2\log\log s_n}} = -1 \text{ a.s.}.\]
+  * **Theorem 13.3 (Another Rep of CFs):** Let $\varphi(t)$ be a continuous real valued function. If it satisfies the following five conditions then it is a characteristic function:
+  
+    1. $\varphi(0) = 1$.
+    2. $\varphi(t) = \varphi(-t)$.
+    3. $\varphi(t) \geq 0$.
+    4. $\varphi(t)$ is nonincreasing on $[0,\infty)$.
+    5. $\varphi(t)$ is convex on $[0,\infty)$.
+    
+  * Note: For the above to hold the mean cannot exist, so this is a very restrictive set of functions.
+  * Note: The above shows that it is possible for two distinct distribution functions $F_1$ and $F_2$ to have CF which are identical on an interval. 
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
   
   
   
